sf-agile-app/src/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>CompletedOn__c</fullName>
        <label>Completed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysInProgress__c</fullName>
        <formula>IF (ISNULL (CompletedOn__c) &amp;&amp; ISNULL (StartedOn__c), 0,
IF (ISNULL (CompletedOn__c), TODAY () - StartedOn__c, CompletedOn__c - StartedOn__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysOverdue__c</fullName>
        <formula>IF (ISNULL (DueOn__c) = FALSE, MAX (0, TODAY () - DueOn__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueOn__c</fullName>
        <label>Due On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HoursCompleted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Hours Completed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PointsValue__c</fullName>
        <formula>IF (OR (TEXT(Points__c) = &apos;?&apos;, TEXT(Points__c) = &apos;∞&apos;), NULL, VALUE (TEXT(Points__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <picklist>
            <picklistValues>
                <fullName>?</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>∞</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirements__c</fullName>
        <label>Detailed Requirements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SprintPoints__c</fullName>
        <formula>TEXT (Sprint__r.Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint Points</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartedOn__c</fullName>
        <label>Started On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed, Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress, Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Yet Estimated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Yet Started</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StoryNeed__c</fullName>
        <formula>Story__r.Need__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>I Want</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoryPoints__c</fullName>
        <formula>Story__r.PointsValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Story Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoryRole__c</fullName>
        <formula>Story__r.Role__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>As A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StorySprintID__c</fullName>
        <formula>Story__r.Sprint__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Story Sprint ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>